Improved spacing on tags, enabled wrapping, fixed focus bug

--- a/styles/organisms/TagBar.scss
+++ b/styles/organisms/TagBar.scss
@@ -1,7 +1,7 @@
 .tag-bar {
   background: $palette-white;
   display: block;
-  height: 35px;
+  min-height: 35px;
   padding: 5px;
 
   .tag-bar-input {
@@ -12,7 +12,7 @@
   .tag {
     border-radius: 3px;
     border: 1px solid lighten($color-border-blue, 20%);
-    margin: 0 .25em 0 0;
+    margin: 0 .25em .25em 0;
     padding: 0 5px;
 
     -webkit-user-select: none;
